--- a/index.html
+++ b/index.html
@@ -76,18 +76,18 @@
             <div class="row container-slide p-4 reveal">
                 <!-- DIV SLIDE -->
                 <div class="col-6 col-lg-4 slide">
-                    <div id="carouselExampleControls-1" class="carousel slide" data-bs-ride="carousel">
+                    <div id="carouselExampleControls-4" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item carousel-item-next carousel-item-start">
                                 <img src="assets/img/vehicule1.png" class="d-block ps-4 petite-slide img-fluid"
                                     alt="Image de présentation, modèle de voiture">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/vehicule1.png" class="d-block ps-4 petite-slide img-fluid"
+                                <img src="assets/img/interieur1.webp" class="d-block ps-4 petite-slide img-fluid"
                                     alt="Image de présentation, modèle de voiture">
                             </div>
                             <div class="carousel-item active carousel-item-start">
-                                <img src="assets/img/vehicule1.png" class="d-block ps-4 petite-slide img-fluid"
+                                <img src="assets/img/interieur2.webp" class="d-block ps-4 petite-slide img-fluid"
                                     alt="Image de présentation, modèle de voiture">
                             </div>
                         </div>
@@ -117,18 +117,18 @@
             <div class="row container-slide p-4 reveal">
                 <!-- DIV SLIDE -->
                 <div class="col-6 col-lg-4 slide">
-                    <div id="carouselExampleControls-2" class="carousel slide" data-bs-ride="carousel">
+                    <div id="carouselExampleControls-4" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
-                            <div class="carousel-item">
-                                <img src="assets/img/vehicule2.png" class="d-block ps-4 petite-slide img-fluid"
-                                    alt="Image de présentation, modèle de voiture">
-                            </div>
                             <div class="carousel-item active">
                                 <img src="assets/img/vehicule2.png" class="d-block ps-4 petite-slide img-fluid"
                                     alt="Image de présentation, modèle de voiture">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/vehicule2.png" class="d-block ps-4 petite-slide img-fluid"
+                                <img src="assets/img/interieur1.webp" class="d-block ps-4 petite-slide img-fluid"
+                                    alt="Image de présentation, modèle de voiture">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/img/interieur2.webp" class="d-block ps-4 petite-slide img-fluid"
                                     alt="Image de présentation, modèle de voiture">
                             </div>
                         </div>
@@ -161,16 +161,16 @@
                 <div class="col-6 col-lg-4 slide">
                     <div id="carouselExampleControls-3" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
-                            <div class="carousel-item">
-                                <img src="assets/img/vehicule3.png" class="d-block ps-4 petite-slide img-fluid"
-                                    alt="Image de présentation, modèle de voiture">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="assets/img/vehicule3.png" class="d-block ps-4 petite-slide img-fluid"
-                                    alt="Image de présentation, modèle de voiture">
-                            </div>
                             <div class="carousel-item active">
                                 <img src="assets/img/vehicule3.png" class="d-block ps-4 petite-slide img-fluid"
+                                    alt="Image de présentation, modèle de voiture">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/img/interieur1.webp" class="d-block ps-4 petite-slide img-fluid"
+                                    alt="Image de présentation, modèle de voiture">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/img/interieur2.webp" class="d-block ps-4 petite-slide img-fluid"
                                     alt="Image de présentation, modèle de voiture">
                             </div>
                         </div>
@@ -202,16 +202,16 @@
                 <div class="col-6 col-lg-4 slide">
                     <div id="carouselExampleControls-4" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
-                            <div class="carousel-item">
-                                <img src="assets/img/vehicule4.png" class="d-block ps-4 petite-slide img-fluid"
-                                    alt="Image de présentation, modèle de voiture">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="assets/img/vehicule4.png" class="d-block ps-4 petite-slide img-fluid"
-                                    alt="Image de présentation, modèle de voiture">
-                            </div>
                             <div class="carousel-item active">
                                 <img src="assets/img/vehicule4.png" class="d-block ps-4 petite-slide img-fluid"
+                                    alt="Image de présentation, modèle de voiture">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/img/interieur1.webp" class="d-block ps-4 petite-slide img-fluid"
+                                    alt="Image de présentation, modèle de voiture">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/img/interieur2.webp" class="d-block ps-4 petite-slide img-fluid"
                                     alt="Image de présentation, modèle de voiture">
                             </div>
                         </div>
@@ -247,16 +247,16 @@
                 <div class="col-6 col-lg-4 slide">
                     <div id="carouselExampleControls-5" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
-                            <div class="carousel-item">
-                                <img src="assets/img/vehicule1.png" class="d-block ps-4 petite-slide img-fluid"
-                                    alt="Image de présentation, modèle de voiture">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="assets/img/vehicule1.png" class="d-block ps-4 petite-slide img-fluid"
-                                    alt="Image de présentation, modèle de voiture">
-                            </div>
                             <div class="carousel-item active">
                                 <img src="assets/img/vehicule1.png" class="d-block ps-4 petite-slide img-fluid"
+                                    alt="Image de présentation, modèle de voiture">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/img/interieur1.webp" class="d-block ps-4 petite-slide img-fluid"
+                                    alt="Image de présentation, modèle de voiture">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/img/interieur2.webp" class="d-block ps-4 petite-slide img-fluid"
                                     alt="Image de présentation, modèle de voiture">
                             </div>
                         </div>
@@ -288,16 +288,16 @@
                 <div class="col-6 col-lg-4 slide">
                     <div id="carouselExampleControls-6" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
-                            <div class="carousel-item">
-                                <img src="assets/img/vehicule2.png" class="d-block ps-4 petite-slide img-fluid"
-                                    alt="Image de présentation, modèle de voiture">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="assets/img/vehicule2.png" class="d-block ps-4 petite-slide img-fluid"
-                                    alt="Image de présentation, modèle de voiture">
-                            </div>
                             <div class="carousel-item active">
-                                <img src="assets/img/vehicule2.png" class="d-block ps-4 petite-slide img-fluid"
+                                <img src="assets/img/vehicule2.webp" class="d-block ps-4 petite-slide img-fluid"
+                                    alt="Image de présentation, modèle de voiture">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/img/interieur1.webp" class="d-block ps-4 petite-slide img-fluid"
+                                    alt="Image de présentation, modèle de voiture">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/img/interieur2.webp" class="d-block ps-4 petite-slide img-fluid"
                                     alt="Image de présentation, modèle de voiture">
                             </div>
                         </div>
@@ -329,16 +329,16 @@
                 <div class="col-6 col-lg-4 slide">
                     <div id="carouselExampleControls-7" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
-                            <div class="carousel-item">
-                                <img src="assets/img/vehicule3.png" class="d-block ps-4 petite-slide img-fluid"
-                                    alt="Image de présentation, modèle de voiture">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="assets/img/vehicule3.png" class="d-block ps-4 petite-slide img-fluid"
-                                    alt="Image de présentation, modèle de voiture">
-                            </div>
                             <div class="carousel-item active">
                                 <img src="assets/img/vehicule3.png" class="d-block ps-4 petite-slide img-fluid"
+                                    alt="Image de présentation, modèle de voiture">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/img/interieur1.webp" class="d-block ps-4 petite-slide img-fluid"
+                                    alt="Image de présentation, modèle de voiture">
+                            </div>
+                            <div class="carousel-item ">
+                                <img src="assets/img/interieur2.webp" class="d-block ps-4 petite-slide img-fluid"
                                     alt="Image de présentation, modèle de voiture">
                             </div>
                         </div>
@@ -370,16 +370,16 @@
                 <div class="col-6 col-lg-4 slide">
                     <div id="carouselExampleControls-8" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
-                            <div class="carousel-item">
-                                <img src="assets/img/vehicule4.png" class="d-block ps-4 petite-slide img-fluid"
-                                    alt="Image de présentation, modèle de voiture">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="assets/img/vehicule4.png" class="d-block ps-4 petite-slide img-fluid"
-                                    alt="Image de présentation, modèle de voiture">
-                            </div>
                             <div class="carousel-item active">
                                 <img src="assets/img/vehicule4.png" class="d-block ps-4 petite-slide img-fluid"
+                                    alt="Image de présentation, modèle de voiture">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/img/interieur1.webp" class="d-block ps-4 petite-slide img-fluid"
+                                    alt="Image de présentation, modèle de voiture">
+                            </div>
+                            <div class="carousel-item ">
+                                <img src="assets/img/interieur2.webp" class="d-block ps-4 petite-slide img-fluid"
                                     alt="Image de présentation, modèle de voiture">
                             </div>
                         </div>
