--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- fontAwesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <!-- feuilles de style -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
@@ -32,7 +32,7 @@
 
         <div class="container formulaire mb-5 position-absolute bottom-0 start-50 translate-middle-x">
             <!-- formulaire -->
-            <form class="row mx-0 d-flex align-items-center" action="">
+            <form class="row mx-0 d-flex align-items-center">
                 <div class="col-xl-3 col-lg-4 col-md-4 col-sm-12 p-1 pe-3">
                     <select class="btn btn-outline-secondary dropdown-toggle btn--bg--color w-100 m-1" id="inlineFormCustomSelect">
                         <option selected>Addresse de départ</option>
@@ -43,11 +43,11 @@
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-4 col-sm-12 p-1  pe-3">
 
-                    <input type="text" class="form-control m-1" placeholder="Début de location" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                    <input type="date" class="form-control m-1"  aria-label="Recipient's username">
 
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-4 col-sm-12 p-1  pe-3">
-                    <input type="text" class="form-control m-1" placeholder="Fin de location" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                    <input type="date" class="form-control m-1"  aria-label="Recipient's username">
 
                     
                 </div>
@@ -76,9 +76,9 @@
             <div class="row container-slide p-4 reveal">
                 <!-- DIV SLIDE -->
                 <div class="col-6 col-lg-4 slide">
-                    <div id="carouselExampleControls-4" class="carousel slide" data-bs-ride="carousel">
+                    <div id="carouselExampleControls-1" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
-                            <div class="carousel-item carousel-item-next carousel-item-start">
+                            <div class="carousel-item active">
                                 <img src="assets/img/vehicule1.png" class="d-block ps-4 petite-slide img-fluid"
                                     alt="Image de présentation, modèle de voiture">
                             </div>
@@ -86,17 +86,17 @@
                                 <img src="assets/img/interieur1.webp" class="d-block ps-4 petite-slide img-fluid"
                                     alt="Image de présentation, modèle de voiture">
                             </div>
-                            <div class="carousel-item active carousel-item-start">
+                            <div class="carousel-item">
                                 <img src="assets/img/interieur2.webp" class="d-block ps-4 petite-slide img-fluid"
                                     alt="Image de présentation, modèle de voiture">
                             </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls-1"
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls-2"
                             data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls-1"
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls-2"
                             data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Next</span>
@@ -117,7 +117,7 @@
             <div class="row container-slide p-4 reveal">
                 <!-- DIV SLIDE -->
                 <div class="col-6 col-lg-4 slide">
-                    <div id="carouselExampleControls-4" class="carousel slide" data-bs-ride="carousel">
+                    <div id="carouselExampleControls-2" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <img src="assets/img/vehicule2.png" class="d-block ps-4 petite-slide img-fluid"
